fix dimensione check terza colonna

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                                                 <span class="float_left padding_0_5">Invia file fino a 100GB con Dropbox Transfert</span>
                                             </div>
                                             <div class="punto_saliente margin_30_0"> 
-                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check check color_1e75fa float_left font_size_20"></i> 
                                                 <span class="float_left padding_0_5">Cartella offline su dispositivi mobili</span>
                                             </div>
                                             <div class="punto_saliente margin_30_0"> 
