aggiunte regole per min_width

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -389,7 +389,7 @@
                 <header>
 
 
-                    <section class="menu position_fixed">
+                    <section class="menu position_fixed min_width_1175px">
                         <div class="contenitore width_100 line_height_80">
                             <div class="contenitore_sx float_left">
                                 <ul>
@@ -435,7 +435,7 @@
                     </section>
 
 
-                    <section class="jumbotron margin_100_0_0_0_0">
+                    <section class="jumbotron margin_100_0_0_0_0 min_width_1175px">
                         <div class="contenitore position_relative">
                             <div class="font_size_4rem font_weight_bold">
                                 <span>Tutto ciò che ti serve per il lavoro, in un unico posto</span>
@@ -464,7 +464,7 @@
 
 
 
-                <main class="margin_100_0">
+                <main class="margin_100_0 min_width_1175px">
 
 
                     <section class="presentazione">
@@ -804,7 +804,7 @@
 
 
 
-                <footer class="background_color_black">
+                <footer class="background_color_black min_width_1175px">
 
 
                     <div class="contenitore">
