fix jumbo position

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             <div class="font_size_4rem font_weight_bold">
                                 <span>Tutto ciò che ti serve per il lavoro, in un unico posto</span>
                             </div>
-                            <div class="contenitore_interno margin_50_0">
+                            <div class="contenitore_interno position_relative bottom_150px_neg">
                                 <div class="contenuto_sx float_left">
                                     <p class="margin_0_0_25_0">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
                                         posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
@@ -443,7 +443,7 @@
                                     <div class="margin_15_0">Annulla in qualsiasi momento</div>
                                     <a href="#"><i class="fas fa-arrow-down"></i></a>
                                 </div>
-                                <div class="contenuto_dx float_right position_absolute">
+                                <div class="contenuto_dx float_right">
                                     <img class="width_img float_right" src="img/jumbo.png" alt="Img jumbo">
                                 </div>
                             </div>
