fix jumbo position

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -440,16 +440,16 @@
                             <div class="font_size_4rem font_weight_bold">
                                 <span>Tutto ciò che ti serve per il lavoro, in un unico posto</span>
                             </div>
-                            <div class="contenitore_interno margin_50_0">
+                            <div class="contenitore_interno position_relative bottom_150px_neg">
                                 <div class="contenuto_sx float_left">
                                     <p class="margin_0_0_25_0">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
                                         posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
                                         e integrato per ottimizzare il flusso di lavoro esistente.</p>
                                     <span><a class="text_decoration_none btn" href="#"> Inizia la tua prova gratuita </a></span>
                                     <div class="margin_15_0">Annulla in qualsiasi momento</div>
-                                    <a href="#pianp_dropbox_business"><i class="fas fa-arrow-down"></i></a>
+                                    <a href="#piano_dropbox_business"><i class="fas fa-arrow-down"></i></a>
                                 </div>
-                                <div class="contenuto_dx float_right position_absolute">
+                                <div class="contenuto_dx float_right">
                                     <img class="width_img float_right" src="../img/jumbo.png" alt="Img jumbo">
                                 </div>
                             </div>
@@ -468,7 +468,7 @@
 
 
                     <section class="presentazione">
-                        <section class="piano_dropbox" id="pianp_dropbox_business">
+                        <section class="piano_dropbox" id="piano_dropbox_business">
                             <h2>Trova il piano Dropbox Business che fa per te</h2>
                             <div class="fatturazione margin_30_0">
                                 <div class="radio">
